--- a/meson.build
+++ b/meson.build
@@ -122,11 +122,13 @@ if get_option('device-type') == 'mmc'
     ]
     extra_scripts += [
         'mmc/obmc-flash-bios',
+        'mmc/recover_pnor_files',
     ]
     extra_unit_files += [
         'mmc/obmc-flash-bios-init.service',
         'mmc/obmc-flash-bios-patch.service',
         'mmc/openpower-bios-factory-reset.service',
+        'mmc/obmc-recover-pnor.service',
     ]
 endif
 
